@startuml

title __ENTITY's Class Diagram__\n

  namespace app {
    namespace entity {
      class app.entity.Linear {
          - a : double
          - b : double
          - noRoots : boolean
          - x : double
          + Linear()
          + getA()
          + getB()
          + getX()
          + setA()
          + setB()
          + toString()
          ~ calculate()
          ~ print()
      }
    }
  }
  

  namespace app {
    namespace entity {
      class app.entity.Series {
          - equations : List<Solution>
          + Series()
          + Series()
          + add()
          + add()
          + clear()
          + getEquations()
          + print()
          + remove()
          + remove()
          + solve()
          + solveAll()
      }
    }
  }
  

  namespace app {
    namespace entity {
      abstract class app.entity.Solution {
          - solved : boolean
          + isSolved()
          + setSolved()
          {abstract} ~ calculate()
          {abstract} ~ print()
      }
    }
  }
  

  namespace app {
    namespace entity {
      class app.entity.Square {
          - a : double
          - b : double
          - c : double
          - d : double
          - x1 : String
          - x2 : String
          + Square()
          + getA()
          + getB()
          + getC()
          + getX1()
          + getX2()
          + setA()
          + setB()
          + setC()
          + toString()
          ~ calculate()
          ~ print()
      }
    }
  }
  

  app.entity.Linear -up-|> app.entity.Solution
  app.entity.Square -up-|> app.entity.Solution


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
